# docs/swagger.json
@@ -539,18 +539,27 @@
                         "schema": {
                             "type": "object",
                             "properties": {
-                                "productId": {
-                                    "type": "number",
-                                    "example": 1
-                                },
-                                "quantity": {
-                                    "type": "number",
-                                    "example": 2
+                                "orderItems": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "properties": {
+                                            "productId": {
+                                                "type": "integer",
+                                                "example": 1
+                                            },
+                                            "quantity": {
+                                                "type": "integer",
+                                                "example": 1
+                                            }
+                                        }
+                                    }
                                 }
                             }
                         }
                     }
-                }
+                },
+                "required": true
             }
         }
     }
