# models/order.js
@@ -4,30 +4,19 @@ const { Model } = require('sequelize');
 module.exports = (sequelize, DataTypes) => {
   class Order extends Model {
     static associate(models) {
-      Order.belongsTo(models.Product, {
-        foreignKey: 'productId',
-        onDelete: 'CASCADE',
-        onUpdate: 'CASCADE',
-      });
       Order.belongsTo(models.User, {
         foreignKey: 'customerId',
         onDelete: 'CASCADE',
         onUpdate: 'CASCADE',
       });
+      Order.hasMany(models.OrderItem, {
+        foreignKey: 'orderId',
+        onDelete: 'CASCADE',
+        onUpdate: 'CASCADE',
+      })
     }
   }
-
   Order.init({
-    productId: {
-      type: DataTypes.INTEGER,
-      allowNull: false,
-      references: {
-        model: 'Products',
-        key: 'id',
-      },
-      onUpdate: 'CASCADE',
-      onDelete: 'CASCADE',
-    },
     customerId: {
       type: DataTypes.INTEGER,
       allowNull: false,
@@ -37,10 +26,6 @@ module.exports = (sequelize, DataTypes) => {
       },
       onUpdate: 'CASCADE',
       onDelete: 'CASCADE',
-    },
-    quantity: {
-      type: DataTypes.INTEGER,
-      allowNull: false,
     },
     totalAmount: {
       type: DataTypes.DECIMAL(10, 2),
