# models/order_item.js
@@ -1,0 +1,54 @@
+'use strict';
+const { Model } = require('sequelize');
+
+module.exports = (sequelize, DataTypes) => {
+  class OrderItem extends Model {
+    static associate(models) {
+      OrderItem.belongsTo(models.Product, {
+        foreignKey: 'productId',
+        onDelete: 'CASCADE',
+        onUpdate: 'CASCADE',
+      });
+      OrderItem.belongsTo(models.Order, {
+        foreignKey: 'orderId',
+        onDelete: 'CASCADE',
+        onUpdate: 'CASCADE',
+      })
+    }
+  }
+
+  OrderItem.init({
+    productId: {
+      type: DataTypes.INTEGER,
+      allowNull: false,
+      references: {
+        model: 'Products',
+        key: 'id',
+      },
+      onUpdate: 'CASCADE',
+      onDelete: 'CASCADE',
+    },
+    orderId: {
+      type: DataTypes.INTEGER,
+      allowNull: false,
+      references: {
+        model: 'Orders',
+        key: 'id',
+      },
+      onUpdate: 'CASCADE',
+      onDelete: 'CASCADE',
+    },
+    quantity: {
+      type: DataTypes.INTEGER,
+      allowNull: false,
+      defaultValue: 0,
+    }
+  }, {
+    sequelize,
+    modelName: 'OrderItem',
+    tableName: 'OrderItems', 
+    timestamps: true, 
+  });
+
+  return OrderItem;
+};
